# acd

./: README.md  build_lazy_init.py  pyproject.toml  requirements.txt
.github/scripts/: update_version.py
.github/workflows/: update_version.yml
3rd/: inmedISOEntities.ent
acd/: __init__.py  __init__.pyi  archive.py  ataispec2200.py  automonkey_solution.py  batcher.py  brex_checker.py  cgm2clearcgm.py  cgm2svg.py  clearcgm2svg.py  combinations.py  compare_raster.py  consTableValidator.py  constants.py  copying.py  data_extraction.py  docx_.py  estimation.py  excel_.py  extract_rows.py  extract_rows_buildexe_global.py  file_info.py  filelist.py  filename_version.py  filepath.py  fits_and_clearences_checker.py  get_inspect_element_html.py  glb2dracoglb.py  graphics.py  illustration_checks.py  illustrations_checker.py  make_library.py  multi.py  ocr_pdf.py  pdf.py  pdf2raster.py  procedure_checker.py  python_func.py  raster2pdf.py  reference_checker.py  (+17 more)
acd/3rd/: s1000d_xml_samples.xml
